syntax = "proto3";
option java_multiple_files = true;
package com.cognizant.cde.learning.grpc;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
}

message EncryptRequest {
    string cleartext = 1;
}

message EncryptResponse {
    string encrypted = 1;
}

service SimpleService {
    rpc sayHello(HelloRequest) returns (HelloResponse);
    rpc encrypt(EncryptRequest) returns (EncryptResponse);
}
